# OperatorDev

./: .gitignore  README.md  gemm1_1x4.cpp  gemm2_1x4.cpp  gemm5_1x4.cpp
OptimizeGEMM/: gemm1_4x4.cpp  gemm2_4x4.cpp  gemm3_4x4.cpp  gemm4_1x4.cpp  gemm4_4x4.cpp
RISC-V/: cheap_hello_world.c  hello_world.asm  hello_world.cpp
cuda/cuda_test/: Makefile  cudatest.cu  test_ldmatrix.cu  test_mma.cu  test_shuffle.cu  test_smem_bank_conflict.cu  test_swizzle.cu
neon/RGB deinterleaving/: disasm_rgb_o3.asm  (+2 more)
neon/gemm/: CMakeLists.txt  config.h.in  record.txt  record_gemm_4x1_origin.txt  record_gemm_4x1_reg.txt  record_gemm_4x1_reg_unroll.txt  record_gemm_4x4_like_blas_asmV1.txt  record_gemm_4x4_like_blas_asmV2.txt  record_gemm_4x4_like_blas_asmV3.txt  record_gemm_4x4_like_blas_neon.txt  record_gemm_4x4_like_blas_neonV2.txt  record_gemm_4x4_neon.txt  record_gemm_4x4_neon_block.txt  record_gemm_4x4_neon_block_unroll4.txt  record_gemm_4x4_neon_packed.txt  record_gemm_4x4_neon_packed_mc128.txt  record_gemm_4x4_neon_unroll4.txt  record_gemm_4x4_reg.txt  record_gemm_8x8_like_blas_neon.txt  record_gemm_origin.txt
neon/gemm/include/: config.h  gemm.h  utils.h
neon/gemm/src/: gemm_4x1_origin.cpp  gemm_4x1_reg.cpp  gemm_4x4_like_blas_asmV1.cpp  gemm_4x4_like_blas_asmV2.cpp  gemm_4x4_like_blas_asmV3.cpp  gemm_4x4_like_blas_neon.cpp  gemm_4x4_neon.cpp  gemm_4x4_neon_packed.cpp  gemm_4x4_reg.cpp  gemm_8x8_like_blas_neon.cpp  gemm_origin.cpp
neon/gemm/utils/: compare_matrix.cpp  copy_matrix.cpp  get_time.cpp  plotPerformance.py  random_matrix.cpp  test.cpp
x86/: intrinc_demo.cpp
(+72 files in other folders)
